# PlantTracker

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  DESIGN_SYSTEM.md  LICENSE  README.md  TODO.md  docker-compose.yml  justfile  package-lock.json  package.json  test_enhanced_features.md
.claude/: settings.local.json
backend/: .env.example  Cargo.toml  DATABASE_SCHEMA.md  Dockerfile  README.md  plant_tracker.db-shm  plant_tracker.db-wal  pytest.ini  requirements-e2e.txt  run_e2e_tests.sh  rust-toolchain.toml  sqlx-data.json  test_e2e_pytest.py
backend/.sqlx/: query-0c021268f6affe179b10b1b9c95fbeefc5a7d34bf16df56c39b44937c353a8f2.json  query-3ed0fffc770db94de97a41d43c0a9c9bbcd3616b84b5922d2099b1fd46608cb2.json  query-d853db2f1a45274782046b340b25b614c20e5632756edeb3cdc8ef2fadd193d5.json  query-f3cf52aad68f75128f854cf68edf5bf81806d26c403a9551620814ac1d730d6d.json
backend/migrations/: 0002_add_invite_waitlist_tables.sql  0003_add_user_roles_and_limits.sql  0008_restore_thumbnail_system.sql  0010_add_schedule_customization_fields.sql  0011_rename_thumbnail_to_preview.sql  0012_add_photo_entry_type.sql  001_consolidated_schema.sql  001_initial_schema.sql  002_sessions_table.sql  003_add_photo_ids_to_tracking_entries.sql  004_update_entry_type_constraint.sql  005_add_thumbnails_support.sql  006_add_google_oauth_tokens.sql  007_remove_thumbnail_system.sql  009_enhance_tracking_for_amounts_and_notes.sql
backend/src/: admin.rs  app_state.rs  lib.rs  main.rs
backend/src/auth/: mod.rs
backend/src/database/: google_oauth.rs  invites.rs  mod.rs  photos.rs  plants.rs  tracking.rs  users.rs
backend/src/handlers/: admin.rs  auth.rs  calendar.rs  google_calendar.rs  google_tasks.rs  invites.rs  mod.rs  photos.rs  plants.rs  tracking.rs
backend/src/middleware/: logging.rs  mod.rs  validation.rs
backend/src/models/: google_oauth.rs  invite.rs  mod.rs  photo.rs  plant.rs  tracking_entry.rs  user.rs
backend/src/utils/: calendar.rs  errors.rs  google_calendar.rs  google_tasks.rs  image_processing.rs  mod.rs  thumbnail.rs  token_refresh_scheduler.rs
backend/tests/: auth_tests.rs  google_tasks_basic_tests.rs  integration_invites.rs  photo_tests.rs  plant_tests.rs  registration_test.rs  simple_invite_test.rs  tracking_tests.rs  user_isolation_tests.rs
backend/tests/common/: mod.rs
frontend/: .env.example  .eslintrc.cjs  Dockerfile.dev  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/public/: manifest.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  openapi.json  openapi.yaml
frontend/src/components/calendar/: ActivityListView.tsx  CalendarView.tsx  DayActivitiesModal.tsx  EventDetailModal.tsx  MobileDayEvents.tsx
frontend/src/components/layouts/: AppLayout.tsx  AuthLayout.tsx  BottomNavigation.tsx  PageHeader.tsx  SettingsMenu.tsx
frontend/src/components/plants/: ActivityLog.tsx  EnhancedCareForm.tsx  PhotoGallery.tsx  PlantCard.tsx  PlantCareStatus.tsx  PlantControls.tsx  PlantForm.tsx  PlantStats.tsx  PreviewUpload.tsx  ThumbnailUpload.tsx  TrackingEntryForm.tsx  TrackingSection.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  CareIcon.tsx  CareTypeButton.tsx  Input.tsx  LoadingSpinner.tsx  Modal.tsx  NavIcon.tsx  PageErrorState.tsx  PageLoadingState.tsx  ThemeToggle.tsx  index.ts  types.ts
frontend/src/providers/: ThemeProvider.tsx
frontend/src/routes/: AdminDashboardPage.tsx  AdminHealthPage.tsx  AdminSettingsPage.tsx  AdminUsersPage.tsx  CalendarPage.tsx  CalendarSettingsPage.tsx  ContactPage.tsx  CreatePlantPage.tsx  EditPlantPage.tsx  HomePage.tsx  InviteManagementPage.tsx  InviteValidationPage.tsx  LoginPage.tsx  NotFoundPage.tsx  PlantDetailPage.tsx  PlantFormPage.tsx  PlantsPage.tsx  PrivacyPage.tsx  RegisterPage.tsx  SearchPage.tsx  TermsPage.tsx  UserSettingsPage.tsx
frontend/src/stores/: auth.ts  plants.ts
frontend/src/styles/: design-tokens.css
frontend/src/types/: api-generated.ts  api.ts  index.ts
frontend/src/utils/: date.ts
