[package]
name = "planty-api"
version = "0.1.0"
edition = "2021"
description = "A REST API for Planty - tracking plant care and growth metrics"
license = "MIT"
repository = "https://github.com/ThomasConrad/PlantTracker"
keywords = ["plants", "api", "tracker", "gardening", "care"]
categories = ["web-programming::http-server", "database"]

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.35", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "postgres", "uuid", "chrono", "migrate"] }

# Authentication
axum-login = "0.15"
tower-sessions = "0.12"
tower-sessions-sqlx-store = { version = "0.12", features = ["sqlite"] }
bcrypt = "0.15"
password-hash = { version = "0.5", features = ["std"] }
async-trait = "0.1"
time = "0.3"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"

# Environment
dotenvy = "0.15"

# File upload
multer = "3.0"

# Image processing
image = { version = "0.24", features = ["jpeg", "png", "gif", "webp", "avif"] }

# Calendar
icalendar = "0.16"

# Google Tasks API
google-tasks1 = "5.0"
hyper = "0.14"
hyper-rustls = { version = "0.24", features = ["http2"] }
yup-oauth2 = "8.0"
urlencoding = "2.1"
reqwest = { version = "0.11", features = ["json"] }

# Validation
validator = { version = "0.18", features = ["derive"] }
regex = "1.10"
lazy_static = "1.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# OpenAPI
utoipa = { version = "4.2", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

[dev-dependencies]
# Testing
reqwest = { version = "0.11", features = ["json", "cookies", "multipart"] }
tokio-test = "0.4"
tempfile = "3.8"
serde_json = "1.0"
